Fix dev dark mode color

--- a/site/src/root.scss
+++ b/site/src/root.scss
@@ -262,10 +262,6 @@ html.dark .prose {
   --tw-prose-bold: #98a3b1 !important;
 }
 
-html.dark body {
-  color: #000;
-}
-
 html {
   background: var(--page-main-bg);
 
